# hello-compute

./: Cargo.toml  Makefile  README.md
src/: functions.rs  lib.rs  main.rs
src/functions/: filter_intersecting.rs  haversine.rs  mod.rs
src/functions/shaders/: filter_intersecting.wgsl  haversine.wgsl
src/shader/: compute.wgsl
