[package]
name = "hello-compute"
version = "0.1.0"
edition = "2024"

[lib]
name = "ggeo"
path = "src/lib.rs"

[dependencies]
bytemuck   = { version = "1.16", features = [ "derive" ] }
env_logger = "0.10"
geo        = "0.30"
geo-types  = "0.7"
log        = "0.4"
pollster   = "0.4.0"
wgpu       = "25.0"